--- a/About/templates/header.html
+++ b/About/templates/header.html
@@ -4,7 +4,7 @@
         <div class="top-bar">
             <a class="menu-toggle" href="#"><span>Menu</span></a>
             <div class="logo">
-                <a href="index.html"></a>
+                <a href="https://ar-rahim-cxtp.onrender.com/"></a>
             </div>		      
             <nav id="main-nav-wrap">
                 <ul class="main-navigation">
