--- a/Blogs/templates/blog.html
+++ b/Blogs/templates/blog.html
@@ -2,7 +2,7 @@
 <section id="services">
     <div class="overlay"></div>
     <!--=======: Blog Section Intro Start :========= -->
-    <div class="row section-intro">
+    <div class="row section-intro" id = "blogSection">
         <div class="col-twelve">
             <h1>{{wholeBlogDescribe.wholeTitle}}</h1>
             <p class="lead">{{wholeBlogDescribe.description}}</p>
