--- a/Contact/templates/contactInformation.html
+++ b/Contact/templates/contactInformation.html
@@ -1,6 +1,7 @@
+{% load static %}
 <section id="contact">
     <svg class="serviceSvg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#141414" fill-opacity="1" d="M0,128L48,154.7C96,181,192,235,288,229.3C384,224,480,160,576,165.3C672,171,768,245,864,250.7C960,256,1056,192,1152,192C1248,192,1344,256,1392,288L1440,320L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
-    <div class="row section-intro">
+    <div class="row section-intro" id = "contactSection">
        <div class="col-twelve">
 
            <h5>Contact</h5>
@@ -64,23 +65,24 @@
            </div>
 
            <h5>Where to find me</h5>
-
-           <p>{{socialInfo.address}}
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29198.4276679762!2d90.37505293540511!3d23.82558702588585!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c6e9ac1b2dbd%3A0xa98a52dad38edc98!2sCantonment%2C%20Dhaka!5e0!3m2!1sen!2sbd!4v1738513006330!5m2!1sen!2sbd" width="200" height="100" style="border:0; border-radius: 5px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" style = "border-radius= 10px;"></iframe>
         </p>
-
        </div>
-
        <div class="col-four tab-full collapse">
-
            <div class="icon">
                <i class="icon-mail"></i>
            </div>
-
-           <h5>Email Me At</h5>
-
-           <p>{{socialInfo.email1}}<br>
-                   {{socialInfo.email2}}			     
-           </p>
+           <h5>Let's Talk Over Email</h5>
+        <p>
+            <a href="mailto:{{ socialInfo.email1 }}?subject=Hello&body=I want to contact you" class = "customColor">
+                {{ socialInfo.email1 }}
+            </a><br>
+            <a class = "customColor" href="mailto:{{ socialInfo.email2 }}?subject=Hello&body=I want to contact you">
+                {{ socialInfo.email2 }}
+            </a>
+        </p>
+        
+        
 
        </div>
 
@@ -90,12 +92,36 @@
                <i class="icon-phone"></i>
            </div>
 
-           <h5>Call Me At</h5>
-
-           <p>Phone: {{socialInfo.phone_number1}}<br>
-               Mobile: {{socialInfo.phone_number2}}<br>
-                 Fax: {{socialInfo.phone_number3}}
-           </p>
+           
+           <div class="contact-section">
+                <h5>Reach Out Anytime</h5>
+                <div class="contact-icons">
+                    <a href="https://wa.me/+8801748983774" target="_blank" class="whatsapp">
+                        <img src="{% static "images/whatsapp.png" %}" alt="WhatsApp">
+                    </a>
+                    <a href="skype:.cid.991ed748c2f83721?call" class="skype">
+                        <img src="{% static "images/skype.png" %}" alt="Skype">
+                    </a>
+                    {% comment %} <a class= "calling" href="tel:+8801748983774" >
+                            <img src="{% static 'images/mobile.jpg' %}" alt="Call">
+                    </a>                  {% endcomment %}
+                    <a class="calling" href="tel:+8801748983774">
+                        <img src="{% static 'images/mobile.jpg' %}" alt="Call">
+                        <span class="tooltip">01577081667</span> <!-- টুলটিপ হিসেবে নাম্বারটি -->
+                    </a>
+                </div>
+            </div>
        </div>
    </div> <!-- /contact-info -->
 </section> 
+
+<script>
+    // calling ক্লাসের উপরে হোভার ইভেন্ট যোগ করুন
+    document.querySelector('.calling').addEventListener('mouseover', function() {
+        document.getElementById('phoneNumber').style.display = 'inline'; // নাম্বারটি দেখান
+    });
+
+    document.querySelector('.calling').addEventListener('mouseout', function() {
+        document.getElementById('phoneNumber').style.display = 'none'; // নাম্বারটি লুকান
+    });
+</script>
