--- a/Contact/templates/footerSocialIcon.html
+++ b/Contact/templates/footerSocialIcon.html
@@ -79,9 +79,7 @@
      <div class="col-eight tab-full">
          <div class="copyright">
                <span id="copyright"></span>
-
-               <span>Design by|| <a href="http://www.styleshout.com/">ar_rahim</a></span> 
-               <span>Develop by|| <a href="https://themewagon.com/">ar_rahim</a></span>	         	
+               <span>Develop by|| <a href="#">ar_rahim</a></span>	         	
             </div>		                  
          </div>
 
