--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
 	 <script src="{% static "js/pace.min.js" %}"></script>
 	 
  	<!--==============: Favicon :============= -->  
-	 <link rel="icon" type="image/png" href="{% static "favicon.ico" %}">
+	 <link rel="icon" type="image/png" href="{% static "favicon.png" %}">
 	 
  	
 	<!--==============: animation :============= -->
