--- a/About/templates/about.html
+++ b/About/templates/about.html
@@ -14,15 +14,15 @@
     
            <div class="row button-section">
                <div class="col-twelve">
-                   <a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
+                   <a href="#contact" title="Hire Me" class="button stroke smoothscroll aboutBtn">Hire Me</a>
                    {% if about.cv %}
-                    <a href="{{ about.cv.url }}" title="Download CV" class="button button-primary" download>Download CV</a>
+                    <a href="{{ about.cv.url }}" title="Download CV" class="button button-primary aboutBtn" download>Download CV</a>
                 {% else %}
                     <p>CV not available.</p>
                 {% endif %}
                </div>   		
            </div>
            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" id="carve">
-            <path fill="#ebebeb" fill-opacity="100" d="M0,160L30,181.3C60,203,120,245,180,245.3C240,245,300,203,360,181.3C420,160,480,160,540,170.7C600,181,660,203,720,192C780,181,840,139,900,149.3C960,160,1020,224,1080,224C1140,224,1200,160,1260,138.7C1320,117,1380,139,1410,149.3L1440,160L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"></path>
+            <path fill="#c6ccd0" fill-opacity="100" d="M0,160L30,181.3C60,203,120,245,180,245.3C240,245,300,203,360,181.3C420,160,480,160,540,170.7C600,181,660,203,720,192C780,181,840,139,900,149.3C960,160,1020,224,1080,224C1140,224,1200,160,1260,138.7C1320,117,1380,139,1410,149.3L1440,160L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"></path>
           </svg>
 </section> 
