--- a/About/templates/aboutIntro.html
+++ b/About/templates/aboutIntro.html
@@ -1,7 +1,7 @@
 <div class="row section-intro">
     <div class="col-twelve ">
      <h5>About</h5>
-     <h1 class="animate__animated animate__backSlideIn">Let me introduce myself.</h1>
+     <h1 >Let me introduce myself.</h1>
 
          <div class="intro-info">
              <img src="{{about.profile_img.url}}" alt="Profile Picture">
