--- a/Projects/templates/projects.html
+++ b/Projects/templates/projects.html
@@ -1,6 +1,10 @@
 {% load static %}
-<section id="portfolio">
-    <svg class="educationSvg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="rgb(235, 235, 235)" fill-opacity="1" d="M0,320L80,304C160,288,320,256,480,245.3C640,235,800,245,960,240C1120,235,1280,213,1360,202.7L1440,192L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"></path></svg>
+<section id="portfolio"> <!-- class = "educationSvg" -->
+
+    <svg class = "educationSvg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#c6ccd0" fill-opacity="1" d="M0,128L40,122.7C80,117,160,107,240,122.7C320,139,400,181,480,181.3C560,181,640,139,720,138.7C800,139,880,181,960,181.3C1040,181,1120,139,1200,138.7C1280,139,1360,181,1400,202.7L1440,224L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z"></path></svg>
+
+    {% comment %} <svg class = "educationSvg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#c6ccd0" fill-opacity="1" d="M0,64L60,90.7C120,117,240,171,360,160C480,149,600,75,720,85.3C840,96,960,192,1080,213.3C1200,235,1320,181,1380,154.7L1440,128L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path></svg> {% endcomment %}
+
     <div id = "exactPortfolio"></div>
     <!-- project Intro Start -->
     <div class="row section-intro">
