--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2466,13 +2466,13 @@ footer .footer-social {
 	display: inline-block;
 	font-size: 2.1rem;
 	margin: 0;
-	padding: 0;
+	padding-left: 0;
 	position: relative;
 	top: -.3rem;
 }
 footer .footer-social li {
 	display: inline-block;
-	margin: 0 12px;
+	margin: 0 10px;
 	padding: 0;
 }
 footer .footer-social li a {
