--- a/About/templates/header.html
+++ b/About/templates/header.html
@@ -14,8 +14,8 @@
           <li><a class="smoothscroll" href="#skilled" title="">Skill</a></li>
           <li><a class="smoothscroll" href="#resume" title="">Resume</a></li>
           <li><a class="smoothscroll" href="#exactPortfolio" title="">Projects</a></li>
-          <li><a class="smoothscroll" href="#services" title="">Blogs</a></li>
-          <li><a class="smoothscroll" href="#contactinfo" title="">Contact</a></li>
+          <li><a class="smoothscroll" href="#blogSection" title="">Blogs</a></li>
+          <li><a class="smoothscroll" href="#contactSection" title="">Contact</a></li>
           <li>
             <a href="{{ about.cv.url }}" download="CV" title="Download CV">Download CV</a>
           </li>
