--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1052,10 +1052,9 @@ header .logo {
 }
 header .logo a {
 	display: block;
-	margin: 0;
+	margin-top: -10px;
 	padding: 0;
 	border: none;
-	font: 0/0 a;
 	text-shadow: none;
 	color: transparent;
 	width: 92px;
