--- a/About/templates/header.html
+++ b/About/templates/header.html
@@ -5,7 +5,7 @@
         <span>Menu</span>
       </a>
       <div class="logo">
-        <a href="https://ar-rahim-cxtp.onrender.com/"></a>
+        <a class="menu-toggle" href="#"></a>
       </div>
       <nav id="main-nav-wrap">
         <ul class="main-navigation">
