--- a/staticfiles/css/main.css
+++ b/staticfiles/css/main.css
@@ -1039,12 +1039,11 @@ header .top-bar {
 	left: 90px;
 	top: 0;
 }
-
 header .logo {
 	float: left;
-	margin-left: 20px;
-	margin-right: 50px;
-	margin-top: 25px;
+	margin-left: 0px;
+	margin-right: 0px;
+	margin-top: 15px;
 	position: relative;
 }
 header .logo a {
@@ -1055,11 +1054,15 @@ header .logo a {
 	font: 0/0 a;
 	text-shadow: none;
 	color: transparent;
-	width: 92px;
-	height: 35px;
-	background: url("../images/logo.png") no-repeat center;
-	background-size: 95px 35px;
+	width: 170px;
+	height: 50px;
+	background: url("../images/logo.svg") no-repeat center;
+	background-size: contain;
+	transition: filter 0.3s ease;
+
 }
+
+
 
 /**
  * menu toggle - (_layout.css)
