--- a/staticfiles/css/main.css
+++ b/staticfiles/css/main.css
@@ -2471,7 +2471,7 @@ footer .footer-social {
 }
 footer .footer-social li {
 	display: inline-block;
-	margin: 0 12px;
+	margin: 0 10px;
 	padding: 0;
 }
 footer .footer-social li a {
@@ -2528,8 +2528,9 @@ footer .copyright span:last-child::after {
 	text-decoration: none;
 	border: 0 none;
 	display: block;
-	height: 6.6rem;
-	width: 6rem;
+	height: 60px;
+	width: 60px;
+	margin: 5px;
 	line-height: 6.6rem;
 	text-align: center;
 	background: #cc005f;
